--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "prerender": "ng run app:prerender",
     "postinstall": "jetifier"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "ng lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "@angular/animations": "^10.1.2",
     "@angular/common": "^10.1.2",
@@ -67,6 +73,7 @@
     "@capacitor/cli": "^2.4.1",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-angular": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@ionic/angular-toolkit": "^2.3.3",
     "@nguniversal/builders": "^10.1.0",
     "@types/core-js": "^2.5.0",
