--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "activityBar.activeBackground": "#b70045",
     "activityBar.activeBorder": "#0c2000",
     "activityBar.background": "#b70045",
-    "activityBar.foreground": "#fadada",
+    "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
     "activityBarBadge.background": "#0c2000",
     "activityBarBadge.foreground": "#e7e7e7",
